<resources>
    <string name="app_name">KinFly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_caps">KINFLY</string>
    <string name="live_updates_images_and_reminders_from_your_family_and_friends">Live updates, images and reminders from your family and friends.</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_to_access_your_account">Log in to access your account</string>
    <string name="signup">Signup</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_text">Enter Text</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_your_free_account_now">Create your free account now.</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="set_password">Set Password</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="wrong_password_or_email_kindly_enter_the_correct_password_and_email">Wrong password or email. Kindly enter the correct password and email.</string>
    <string name="verify_email">Verify Email</string>
    <string name="please_check_email_and_verify_your_email_via_the_link_given_in_the_email">Please check email and verify your email via the link given in the email.</string>
    <string name="didn_t_receive_any_email">Didn’t receive any email?</string>
    <string name="resend_again">Resend Again</string>
    <string name="done">Done</string>
</resources>