<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.verify_email.VerifyEmailFragment">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_37sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/verify_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
<TextView
        android:id="@+id/descTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_light"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/please_check_email_and_verify_your_email_via_the_link_given_in_the_email"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_verify_email"
android:layout_margin="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/doneBtnTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTV" />



    <TextView
        android:id="@+id/doneBtnTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_23sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:background="@drawable/bg_primary_round_10"
        android:elevation="@dimen/_1sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:singleLine="true"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/resendDescTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resendDescTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/didn_t_receive_any_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resendBtnTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resendBtnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/resend_again"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="@+id/resendDescTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resendDescTV"
        app:layout_constraintTop_toTopOf="@+id/resendDescTV" />
</androidx.constraintlayout.widget.ConstraintLayout>