<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.onboarding.OnBoardingFragment">

    <ImageView
        android:id="@+id/mainIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:src="@drawable/ic_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/titleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/app_name_caps"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/descTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_42sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:text="@string/live_updates_images_and_reminders_from_your_family_and_friends"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/nextBtnTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/nextBtnV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_23sdp"
        android:background="@drawable/bg_primary_round_10"
        app:layout_constraintBottom_toBottomOf="@id/nextBtnTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextBtnTV" />

    <TextView
        android:id="@+id/nextBtnTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:elevation="@dimen/_1sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="start"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:singleLine="true"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/loginDescTV"
        app:layout_constraintEnd_toStartOf="@+id/nextBtnIV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/nextBtnIV"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_34sdp"
        android:elevation="@dimen/_1sdp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/nextBtnV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nextBtnTV"
        app:layout_constraintTop_toTopOf="@+id/nextBtnV" />


    <TextView
        android:id="@+id/loginDescTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/dull_black"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginBtnTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginBtnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/login"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_9sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginDescTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginDescTV"
        app:layout_constraintTop_toTopOf="@+id/loginDescTV" />

</androidx.constraintlayout.widget.ConstraintLayout>